2005-12-22  Srinivasa Ragavan <sragavan@novell.com>

	* gui/search/addresstypes.xml: Modified the categories to option menu
	format in advanced search
	
2005-12-21  Not Zed  <NotZed@Ximian.com>
 
 	* gui/component/addressbook-component.c (impl_createView): changed
 	from createControls for new shell apis.

	Committed on behalf of Notzed - partha
 
2005-12-17  Tor Lillqvist  <tml@novell.com>

	* gui/component/addressbook-migrate.c
	* importers/evolution-vcard-importer.c
	* tools/evolution-addressbook-export-list-folders.c: Use gstdio
	wrappers. Use GDir API instead of dirent. Use GLib to convert file
	names to URIs and back. Open files in binary mode.

	* gui/widgets/gal-view-minicard.c
	* printing/e-contact-print.c: Use libedataserver's
	e_xml_parse_file() and e_xml_save_file() instead of calling libxml
	functions directly, as they don't understand the GLib file name
	encoding (UTF-8) on Win32.

	* tools/evolution-addressbook-export-list-cards.c: Use gstdio
	wrappers. No fork() on Windows, but the fork-to-background
	functionality doesn't seem essential?

2005-12-15  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/search/e-addressbook-search-dialog.c: (dialog_response): Added
	code to set the color from the theme to indicate advance search
	presence.

2005-12-14  Sushma Rai  <rsushma@novell.com>

	* importers/evolution-ldif-importer.c (ldif_import): Proceeding with
	the import activity only if the book is writable. 

	* importers/evolution-vcard-importer.c (vcard_import): Similar.
	Fixes #266003

2005-12-10  Sushma Rai  <rsushma@novell.com>

	* gui/contact-editor/e-contact-editor.c (fill_in_address_textview):
	Not inserting new line at the end and also, placing the cursor at
	the beginning of the widget. Fixes #300300.

2005-12-06  Veerapuram Varadhan <vvaradhan@novell.com>
	
	* conduits/addressbook-conduit.c: (pre_sync):
	Authenticate by reading the store-password for calendars that has
	"auth" property set.